Gencode/Test/Valide/Fournis/entier1.deca
// Description:
//    tests d'expressions entieres
//
// Resultats:
//    1
//    2
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 01/01/2012

int i ; 
{
   i = 1;
   println(i);
   i = i + 1;
   println(i);
}

